Fix specific spacing inconsistency in mobile Phase 2: remove double margin between columns

--- a/src/styles/MixedGallery.module.scss
+++ b/src/styles/MixedGallery.module.scss
@@ -127,7 +127,7 @@
     }
 
     .oddColumn {
-        margin-bottom: 5vh;
+        margin-bottom: 0;
         /* Reduced from 10vh */
     }
 }
